<resources>
    <string name="reminder_channel">Course reminders</string>
    <string name="reminder_start">Time to study</string>
    <string name="reminder_question">Did you manage to study?</string>
    <string name="reminder_title">Reminders</string>
    <string name="reminder_enable">Allow notifications</string>
    <string name="reminder_exact">Allow precise reminders</string>
    <string name="reminder_active">Reminders are enabled</string>
    <string name="reminder_explanation">Notifications and precise alarm access are needed for reminders at the start and end of a session.</string>
    <string name="guide_title">How to use</string>
</resources>
